[package]
name = "y-serv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.71"
axum = { version = "0.6.19", features = ["ws"] }
bincode = "1.3.3"
clap = { version = "4.3.12", features = ["derive"] }
dashmap = "5.5.0"
futures = "0.3.28"
rust-s3 = "0.33.0"
serde = { version = "1.0.171", features = ["derive"] }
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.14"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "fmt"] }
y-sync = { version = "0.3.1", features = ["net"] }
yrs = "0.16.9"
yrs-kvstore = "0.1.0"
