[package]
name = "y-serve"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.72"
async-trait = "0.1.71"
axum = { version = "0.6.19", features = ["ws", "headers"] }
bincode = "1.3.3"
clap = { version = "4.3.12", features = ["derive"] }
dashmap = "5.5.0"
futures = "0.3.28"
lib0 = "0.16.9"
nanoid = "0.4.0"
rust-s3 = "0.33.0"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.103"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.14"
tower-http = { version = "0.4.1", features = ["trace"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "fmt"] }
url = "2.4.0"
y-sync = { version = "0.3.1", features = ["net"] }
yrs = "0.16.9"
yrs-kvstore = "0.1.0"

[patch.crates-io]
lib0 = { git="https://github.com/paulgb/y-crdt.git", branch="paulgb/add-root-keys" }
yrs = { git="https://github.com/paulgb/y-crdt.git", branch="paulgb/add-root-keys" }
