[workspace]
members = [
    "y-sweet-server",
    "y-sweet-server-core",
]

exclude = [
    "y-sweet-server-worker",
]

[patch.crates-io]
# Awaiting https://github.com/y-crdt/y-crdt/pull/307
lib0 = { git="https://github.com/paulgb/y-crdt.git", branch="paulgb/add-root-keys" }
yrs = { git="https://github.com/paulgb/y-crdt.git", branch="paulgb/add-root-keys" }
