[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "y_sweet_sdk"
version = "0.5.0"
description = "Python bindings for the Y-Sweet server"
readme = "README.md"
authors = [{ name = "Paul Butler", email = "paul@jamsocket.com" }]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests~=2.32.2",
    "pycrdt~=0.9.11",
]

[project.urls]
Homepage = "https://github.com/jamsocket/y-sweet"

[project.optional-dependencies]
dev = [
    "build==1.2.2",
    "pytest~=8.3.3",
    "twine~=5.1.1",
    "ruff~=0.6.5",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["tests"]
