[package]
name = "y-serve-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.72"
async-trait = "0.1.71"
bincode = "1.3.3"
pasetors = "0.6.7"
serde = { version = "1.0.173", features = ["derive"] }
serde_json = "1.0.103"
tracing = "0.1.37"
y-sync = "0.3.1"
yrs = "0.16.9"
yrs-kvstore = "0.1.0"

[dev-dependencies]
dashmap = "5.5.0"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
