[package]
name = "y-serve-worker"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
async-trait = "0.1.72"
console_error_panic_hook = "0.1.7"
js-sys = "0.3.57"
nanoid = "0.4.0"
serde_json = "1.0.103"
y-serve-core = { path = "../y-serve-core" }
wasm-bindgen = "=0.2.84"
wasm-bindgen-futures = "=0.4.30"
web-sys = "=0.3.60"
worker = "0.0.17"
worker-sys = "=0.0.9"
anyhow = "1.0.72"
