[package]
name = "y-sweet-core"
version = "0.0.12"
edition = "2021"
description = "Sans-IO core of the y-sweet yjs CRDT server."
license = "MIT"
homepage = "https://y-sweet.dev"
repository = "https://github.com/drifting-in-space/y-sweet"

[dependencies]
anyhow = "1.0.72"
async-trait = "0.1.71"
base64 = "0.21.2"
bincode = "1.3.3"
getrandom = { version = "0.2.10", features = ["js"] }
lib0 = "0.16.9"
rand = "0.8.5"
serde = { version = "1.0.173", features = ["derive"] }
serde_json = "1.0.103"
sha2 = "0.10.7"
thiserror = "1.0.44"
tracing = "0.1.37"
yrs = "0.16.9"
yrs-kvstore = "0.1.0"

[dev-dependencies]
dashmap = "5.5.0"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
