[package]
name = "y-sweet-core"
version = "0.8.2"
edition = "2021"
description = "Sans-IO core of the y-sweet yjs CRDT server."
license = "MIT"
homepage = "https://y-sweet.dev"
repository = "https://github.com/drifting-in-space/y-sweet"

[features]
default = ["sync"]
sync = ["yrs/sync"]
single-threaded = []

[dependencies]
anyhow = "1.0.72"
async-trait = "0.1.71"
aws-config = { version = "1.2.5", features = ["behavior-version-latest"] }
aws-credential-types = "1.2.5"
aws-sdk-s3 = "1.89.0"
aws-types = "1.2.5"
bincode = "1.3.3"
bytes = "1.5.0"
data-encoding = "2.4.0"
getrandom = { version = "0.2.10", features = ["js"] }
rand = "0.8.5"
reqwest = { version = "0.12.5", default-features = false, features = [
    "rustls-tls-webpki-roots",
] }
serde = { version = "1.0.173", features = ["derive"] }
serde_json = "1.0.103"
sha2 = "0.10.7"
thiserror = "1.0.44"
time = { version = "0.3.25", features = ["wasm-bindgen"] }
tracing = "0.1.37"
yrs = { version = "0.19.1" }
yrs-kvstore = "0.3.0"

[dev-dependencies]
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
dashmap = "6.0.1"
