[package]
name = "y-sweet-server-worker"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
async-trait = "0.1.72"
console_error_panic_hook = "0.1.7"
js-sys = "0.3.57"
nanoid = "0.4.0"
y-sweet-server-core = { path = "../y-sweet-server-core" }
wasm-bindgen = "=0.2.84"
wasm-bindgen-futures = "=0.4.30"
web-sys = "=0.3.60"
worker = "=0.0.13" # clamped until https://github.com/cloudflare/workers-rs/issues/360 is closed
worker-sys = "=0.0.7"
anyhow = "1.0.72"
futures = "0.3.28"
thiserror = "1.0.44"
serde = { version = "1.0.177", features = ["derive"] }
