[package]
name = "y-sweet-worker"
version = "0.0.9"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# whether to expose a fetch event handler (turn off when used as a library by a library that implements its own fetch handler)
fetch-event = []
default = ["fetch-event"]

[dependencies]
async-trait = "0.1.72"
console_error_panic_hook = "0.1.7"
js-sys = "0.3.57"
nanoid = "0.4.0"
y-sweet-core = { path = "../y-sweet-core" }
wasm-bindgen = "=0.2.84"
wasm-bindgen-futures = "=0.4.30"
web-sys = "=0.3.60"
worker = "=0.0.13" # clamped until https://github.com/cloudflare/workers-rs/issues/360 is closed
worker-sys = "=0.0.7"
anyhow = "1.0.72"
futures = "0.3.28"
thiserror = "1.0.44"
serde = { version = "1.0.177", features = ["derive"] }
serde_json = "1.0.104"
rusty-s3 = "0.4.1"
reqwest = "0.11.18"
time = { version = "0.3.25", features = ["wasm-bindgen"] }
