[package]
name = "y-sweet-worker"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# whether to expose a fetch event handler (turn off when used as a library by a library that implements its own fetch handler)
fetch-event = []
default = ["fetch-event"]

[dependencies]
async-trait = "0.1.72"
console_error_panic_hook = "0.1.7"
js-sys = "0.3.57"
nanoid = "0.4.0"
y-sweet-core = { path = "../y-sweet-core" }
wasm-bindgen = "=0.2.86"
wasm-bindgen-futures = "=0.4.36"
web-sys = "=0.3.63"
worker = "=0.0.18"
worker-sys = "=0.0.10"
anyhow = "1.0.72"
futures = "0.3.28"
thiserror = "1.0.44"
serde = { version = "1.0.177", features = ["derive"] }
serde_json = "1.0.104"
