[package]
name = "y-sweet"
version = "0.0.12"
edition = "2021"
description = "A standalone Yjs CRDT server with built-in persistence and auth."
license = "MIT"
homepage = "https://y-sweet.dev"
repository = "https://github.com/drifting-in-space/y-sweet"

[dependencies]
anyhow = "1.0.72"
async-trait = "0.1.71"
axum = { version = "0.6.19", features = ["ws", "headers"] }
clap = { version = "4.3.12", features = ["derive"] }
colored = "2.0.4"
dashmap = "5.5.0"
futures = "0.3.28"
lib0 = "0.16.9"
nanoid = "0.4.0"
pasetors = { version = "0.6.7", features = ["serde"] }
rust-s3 = { version = "0.33.0", features = ["tokio-rustls-tls", "fail-on-err"], default-features = false }
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.103"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.14"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "fmt"] }
url = "2.4.0"
y-sweet-core = { version="0.0.12", path = "../y-sweet-core" }
yrs = "0.16.9"
yrs-kvstore = "0.1.0"
