[package]
name = "y-sweet"
version = "0.8.1"
edition = "2021"
description = "A standalone Yjs CRDT server with built-in persistence and auth."
license = "MIT"
homepage = "https://y-sweet.dev"
repository = "https://github.com/drifting-in-space/y-sweet"

[dependencies]
anyhow = "1.0.72"
async-trait = "0.1.71"
axum = { version = "0.7.4", features = ["ws"] }
axum-extra = { version = "0.9.2", features = ["typed-header"] }
clap = { version = "4.3.12", features = ["derive", "env"] }
colored = "2.0.4"
dashmap = "6.0.1"
futures = "0.3.28"
headers = "0.4.0"
lib0 = "0.16.9"
nanoid = "0.4.0"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.103"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread", "signal"] }
tokio-stream = "0.1.14"
tokio-util = { version = "0.7.11", features = ["rt"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "fmt"] }
url = "2.4.0"
y-sweet-core = { version = "0.8.1", path = "../y-sweet-core", features=["sync"] }
yrs = { version = "0.19.1" }
yrs-kvstore = "0.3.0"

[dev-dependencies]
http = "1.1.0"
